Adjusted title and added author and keywords to metadata

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
+    <!-- https://www.w3schools.com/tags/tag_meta.asp | Added keywords and author to used template for SEO -->
+<meta name="keywords" content="Gym, Fitness, Strength, Cardio, Condition, Grouplessons, Dream Big">
+<meta name="Description" content="ze Gym offers HIIT, Bodypump, Boxing, Spinning, Pilates and Flow Yoga."/>
+<meta name="author" content="Yorick van den Hurk">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<title>ze Gym</title>
+<title>ze Gym | Dream Big</title>
+
 </head>
 <body>
     <header>
