--- a/index.html
+++ b/index.html
@@ -1,32 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- https://www.w3schools.com/tags/tag_meta.asp | Added keywords and author to used template for SEO -->
-<meta name="keywords" content="Gym, Fitness, Strength, Cardio, Condition, Grouplessons, Dream Big">
-<meta name="Description" content="ze Gym offers HIIT, Bodypump, Boxing, Spinning, Pilates and Flow Yoga."/>
-<meta name="author" content="Yorick van den Hurk">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>ze Gym | Dream Big</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- https://www.w3schools.com/tags/tag_meta.asp | Added keywords and author to used template for SEO -->
+    <meta name="keywords" content="Gym, Fitness, Strength, Cardio, Condition, Grouplessons, Dream Big">
+    <meta name="Description" content="ze Gym offers HIIT, Bodypump, Boxing, Spinning, Pilates and Flow Yoga." />
+    <meta name="author" content="Yorick van den Hurk">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>ze Gym | Dream Big</title>
 
 </head>
+
 <body>
     <header>
+        <!-- Navigation bar -->
+        <!-- Based on https://www.youtube.com/watch?v=23bpce-5s8I  and customized/expanded further -->
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+            <a href="#Home" class="navbar-brand">ze Gym</a>
+            <!-- Navigation toggle-->
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu" type="button"
+                aria-controls="navbarMenu" aria-expanded="false" aria-label="toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarMenu">
+                <!-- Navigation menu items-->
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item" data-toggle="collapse">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item" data-toggle="collapse">
+                        <a href="#" class="nav-link">About us</a>
+                    </li>
+                    <li class="nav-item" data-toggle="collapse">
+                        <a href="#" class="nav-link">Classes</a>
+                    </li>
+                    <li class="nav-item" data-toggle="collapse">
+                        <a href="#" class="nav-link">Schedule</a>
+                    </li>
+                    <li class="nav-item" data-toggle="collapse">
+                        <a href="#" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </div>
 
     </header>
 
-
-    
     <footer>
 
     </footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
