Added navbar button and fixed hamburger menu at mobile size

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <!-- Navigation bar -->
         <!-- Based on https://www.youtube.com/watch?v=23bpce-5s8I  and customized/expanded further -->
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <a href="#Home" class="navbar-brand">ze Gym</a>
             <!-- Navigation toggle-->
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu" type="button"
@@ -48,9 +48,27 @@
                         <a href="#" class="nav-link">Contact</a>
                     </li>
                 </ul>
+                <!-- Button based on https://jsfiddle.net/shuvamallick/3o0h5oka/  but completely customized-->
+                <button type="button" class="btn btn-danger btn-sm d-none d-sm-inline-block">Sign in / Sign up</button>
             </div>
-
     </header>
+
+    <!-- Hero image -->
+
+
+    <!-- Callout-->
+
+
+    <!-- About us -->
+
+
+    <!-- Classes-->
+
+
+    <!-- Schedule -->
+
+
+    <!-- Contact -->
 
     <footer>
 
