Added basic modal in nav-bar and added js-script link at bottem index.html

--- a/index.html
+++ b/index.html
@@ -48,9 +48,35 @@
                         <a href="#" class="nav-link">Contact</a>
                     </li>
                 </ul>
-                <!-- Button based on https://jsfiddle.net/shuvamallick/3o0h5oka/  but completely customized-->
-                <button type="button" class="btn btn-danger btn-sm d-none d-sm-inline-block">Sign in / Sign up</button>
             </div>
+            <!-- Button based on https://jsfiddle.net/shuvamallick/3o0h5oka/  but completely customized-->
+            <!-- Trigger/Open The Modal -->
+            <button id="myBtn" type="button" class="btn btn-danger btn-sm d-none d-sm-inline-block">Sign in / Sign up</button>
+
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+
+                <!-- Modal content -->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <span class="close">&times;</span>
+                        <h2>Modal Header</h2>
+                    </div>
+                    <div class="modal-body">
+                        <p>Some text in the Modal Body</p>
+                        <p>Some other text...</p>
+                    </div>
+                    <div class="modal-footer">
+                        <h3>Modal Footer</h3>
+                    </div>
+                </div>
+
+            </div>
+
+            </div>
+        </nav>
+
+
     </header>
 
     <!-- Hero image -->
@@ -72,7 +98,9 @@
 
     <footer>
 
+
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
@@ -82,6 +110,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous">
     </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
