Added hero image and CSS for positioning background

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             </div>
             <!-- Button based on https://jsfiddle.net/shuvamallick/3o0h5oka/  but completely customized-->
             <!-- Trigger/Open The Modal -->
-            <button id="myBtn" type="button" class="btn btn-danger btn-sm d-none d-sm-inline-block">Sign in / Sign up</button>
+            <button id="myBtn" type="button" class="btn btn-danger btn-sm d-none d-sm-inline-block">Sign in / Sign
+                up</button>
 
             <!-- The Modal -->
             <div id="myModal" class="modal">
@@ -70,19 +71,18 @@
                         <h3>Modal Footer</h3>
                     </div>
                 </div>
-
-            </div>
-
             </div>
         </nav>
-
-
     </header>
 
     <!-- Hero image -->
+        <!--  http://bit.ly/3qSMcbN Used as a guideline for CSS styling -->
+    <section id="section-hero-image">
 
 
-    <!-- Callout-->
+    </section>
+
+    <!-- Callou t-->
 
 
     <!-- About us -->
