Created sticky socials at left side of the screen

--- a/index.html
+++ b/index.html
@@ -109,10 +109,15 @@
             <div class="HeroText">
                 <h2>Dream Big!</h2>
             </div>
-
+            <!-- Sticky social bar is based on https://www.w3schools.com/howto/howto_css_sticky_social_bar.asp -->
+            <div class="icon-bar">
+                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="facebook"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" class="instagram"><i class="fab fa-instagram-square"></i></a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" class="youtube"><i class="fab fa-youtube-square"></i></a>
+            </div>
 
         </div>
-        <!-- Callou t-->
+        <!-- Callout-->
 
     </section>
 
@@ -128,7 +133,8 @@
                 <div class="col-md-4 ">
                     <div class="testimonial">
                         <div class="mx-auto">
-                            <img src="assets/images/testimonial-images/review1.png" class="rounded-circle img-fluid" alt="review1">
+                            <img src="assets/images/testimonial-images/review1.png" class="rounded-circle img-fluid"
+                                alt="review1">
                         </div>
                         <h5 class="font-weight-bold dark-grey-text mt-4">Ava Adley</h5>
                         <p class="">
@@ -141,7 +147,8 @@
                 <div class="col-md-4">
                     <div class="testimonial">
                         <div class="mx-auto">
-                            <img src="assets/images/testimonial-images/review2.png" class="rounded-circle img-fluid" alt="review2">
+                            <img src="assets/images/testimonial-images/review2.png" class="rounded-circle img-fluid"
+                                alt="review2">
                         </div>
                         <h5 class="font-weight-bold dark-grey-text mt-4">Bernardo Bason</h5>
                         <p class="">
@@ -154,7 +161,8 @@
                 <div class="col-md-4 d-none d-sm-block">
                     <div class="testimonial">
                         <div class="mx-auto">
-                            <img src="assets/images/testimonial-images/review3.png" class="rounded-circle img-fluid" alt="review3">
+                            <img src="assets/images/testimonial-images/review3.png" class="rounded-circle img-fluid"
+                                alt="review3">
                         </div>
                         <h5 class="font-weight-bold dark-grey-text mt-4">Christina Cabral</h5>
                         <p class="">
@@ -166,11 +174,13 @@
                 <div class="col-md-4 d-none d-md-block">
                     <div class="testimonial">
                         <div class="mx-auto">
-                            <img src="assets/images/testimonial-images/review4.png" class="rounded-circle img-fluid" alt="review3">
+                            <img src="assets/images/testimonial-images/review4.png" class="rounded-circle img-fluid"
+                                alt="review3">
                         </div>
                         <h5 class="font-weight-bold dark-grey-text mt-4">Dominic Daniau</h5>
                         <p class="">
-                            Good mix of available classes and traditional gym equipment to train at your own convenience. Lots of space for Olympic
+                            Good mix of available classes and traditional gym equipment to train at your own
+                            convenience. Lots of space for Olympic
                             lifting too. Unless you’re here in the early morning or the evening, there are never too
                             many people which is nice.</p>
                     </div>
@@ -178,27 +188,32 @@
                 <div class="col-md-4 d-none d-md-block">
                     <div class="testimonial">
                         <div class="mx-auto">
-                            <img src="assets/images/testimonial-images/review5.png" class="rounded-circle img-fluid" alt="review3">
+                            <img src="assets/images/testimonial-images/review5.png" class="rounded-circle img-fluid"
+                                alt="review3">
                         </div>
                         <h5 class="font-weight-bold dark-grey-text mt-4">Eeshani Elayavalli</h5>
                         <p class="">
                             LOVE ze Gym! The trainers are always so upbeat, motivating, knowledgeable and encouraging.
                             The
                             community they have built here is incredible, and it is such a joy working out
-                            here. Definitely recommend and encourage everyone to try it out. I guarantee you won’t be disappointed.
+                            here. Definitely recommend and encourage everyone to try it out. I guarantee you won’t be
+                            disappointed.
                         </p>
                     </div>
                 </div>
                 <div class="col-md-4 d-none d-md-block">
                     <div class="testimonial">
                         <div class="mx-auto">
-                            <img src="assets/images/testimonial-images/review6.png" class="rounded-circle img-fluid" alt="review3">
+                            <img src="assets/images/testimonial-images/review6.png" class="rounded-circle img-fluid"
+                                alt="review3">
                         </div>
                         <h5 class="font-weight-bold dark-grey-text mt-4">Friedrich Fahlmer</h5>
                         <p class="">
-                            I absolutely love this place! The staff is amazing and offer tons of support and encouragement on
+                            I absolutely love this place! The staff is amazing and offer tons of support and
+                            encouragement on
                             your fitness journey. The workouts are tough but rewarding and produce amazing results
-                            quickly if you are ready to commit to it! I’ve been going to ze Gym for about 3 months now and I have achieved better
+                            quickly if you are ready to commit to it! I’ve been going to ze Gym for about 3 months now
+                            and I have achieved better
                             results in that time than I have in years at other gyms.</p>
                     </div>
                 </div>
