--- a/index.html
+++ b/index.html
@@ -127,16 +127,19 @@
     </section>
 
     <!-- Testimonials -->
-    <section class="text-center">
-        <h3 class="font-weight-bold">Testimonials</h1>
+    <!-- Coding is based on https://getbootstrap.com/docs/4.6/components/carousel/ but customized into not being a carousel - see testing.md -->
+    <!-- Testimonials are based on https://eatsleepwander.com/gym-review-example/ -->
+    <section class="testimonials text-center">
+        <h3 class="font-weight-bold">Testimonials</h3>
             <div class="row text-center">
                 <div class="col-md-4 ">
                     <div class="testimonial">
                         <div class="mx-auto">
-                            <img src="assets/images/testimonial-images/review1.png" class="rounded-circle img-fluid"
-                                alt="review1">
+                            <img src="assets/images/review1.png" class="rounded-circle img-fluid" alt="review1">
                         </div>
                         <h5 class="font-weight-bold dark-grey-text mt-4">Ava Adley</h5>
+                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                        <hr class="hr-testimonials"> 
                         <p class="">
                             ze Gym so far has been awesome. They have exceptional trainers who are very kind too, the
                             overall vibe is great and so far
@@ -147,10 +150,11 @@
                 <div class="col-md-4">
                     <div class="testimonial">
                         <div class="mx-auto">
-                            <img src="assets/images/testimonial-images/review2.png" class="rounded-circle img-fluid"
-                                alt="review2">
+                            <img src="assets/images/review2.png" class="rounded-circle img-fluid" alt="review2">
                         </div>
                         <h5 class="font-weight-bold dark-grey-text mt-4">Bernardo Bason</h5>
+                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                        <hr class="hr-testimonials">
                         <p class="">
                             I love this place. I highly recommend ze Gym to anyone looking to get in better shape. The
                             trainers are really awesome and helpful, plus they make you feel really comfortable. The 45
@@ -161,10 +165,11 @@
                 <div class="col-md-4 d-none d-sm-block">
                     <div class="testimonial">
                         <div class="mx-auto">
-                            <img src="assets/images/testimonial-images/review3.png" class="rounded-circle img-fluid"
-                                alt="review3">
+                            <img src="assets/images/review3.png" class="rounded-circle img-fluid" alt="review3">
                         </div>
                         <h5 class="font-weight-bold dark-grey-text mt-4">Christina Cabral</h5>
+                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                        <hr class="hr-testimonials">
                         <p class="">
                             Easily the best gym in the city, reasonably priced and a great workout atmosphere – nice but
                             not fancy, lots of people serious about fitness. Ive gotten some of my best training advice
@@ -174,10 +179,11 @@
                 <div class="col-md-4 d-none d-md-block">
                     <div class="testimonial">
                         <div class="mx-auto">
-                            <img src="assets/images/testimonial-images/review4.png" class="rounded-circle img-fluid"
-                                alt="review3">
+                            <img src="assets/images/review4.png" class="rounded-circle img-fluid" alt="review3">
                         </div>
                         <h5 class="font-weight-bold dark-grey-text mt-4">Dominic Daniau</h5>
+                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                        <hr class="hr-testimonials">
                         <p class="">
                             Good mix of available classes and traditional gym equipment to train at your own
                             convenience. Lots of space for Olympic
@@ -188,10 +194,11 @@
                 <div class="col-md-4 d-none d-md-block">
                     <div class="testimonial">
                         <div class="mx-auto">
-                            <img src="assets/images/testimonial-images/review5.png" class="rounded-circle img-fluid"
-                                alt="review3">
+                            <img src="assets/images/review5.png" class="rounded-circle img-fluid" alt="review3">
                         </div>
                         <h5 class="font-weight-bold dark-grey-text mt-4">Eeshani Elayavalli</h5>
+                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                        <hr class="hr-testimonials">
                         <p class="">
                             LOVE ze Gym! The trainers are always so upbeat, motivating, knowledgeable and encouraging.
                             The
@@ -204,10 +211,11 @@
                 <div class="col-md-4 d-none d-md-block">
                     <div class="testimonial">
                         <div class="mx-auto">
-                            <img src="assets/images/testimonial-images/review6.png" class="rounded-circle img-fluid"
-                                alt="review3">
+                            <img src="assets/images/review6.png" class="rounded-circle img-fluid" alt="review3">
                         </div>
                         <h5 class="font-weight-bold dark-grey-text mt-4">Friedrich Fahlmer</h5>
+                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                        <hr class="hr-testimonials">
                         <p class="">
                             I absolutely love this place! The staff is amazing and offer tons of support and
                             encouragement on
