Added text and a general layout to the classes section

--- a/index.html
+++ b/index.html
@@ -229,27 +229,81 @@
     </section>
 
 
-    <!-- Classes-->
-    <section class="classes">
+     <!-- Classes-->
+     <section class="classes container">
         <div>
-
+            <h3 class="">Classes</h3>
         </div>
-        <div>
-
+        <div class="row">
+            <div class="col">
+                <h4>HIIT</h4>
+                <div class="">
+                    <!-- Text used from https://www.fearlessmotivation.com/2016/09/28/no-time-for-exercise-10-reasons-why-you-should-use-hiit/  -->
+                    <p>Every day we make great efforts at juggling demands from work, family, social obligations,
+                        and being stuck in traffic. High intensity interval training, or HIIT Workout, is a great way to
+                        fit
+                        in a rigorous workout in a short time span and make it fun to boot! It can deliver as good or
+                        better
+                        fitness benefits than steady state cardio (SSC), such as running, but in less time per day and
+                        week.
+                        A HIIT workout is the best fitness value for your time.</p>
+                </div>
+            </div>
+            <div class="col">
+                <h4>Bodypump</h4>
+                <div class="">
+                    <!-- Text used from https://www.lesmills.com/clubs-and-facilities/our-workouts/strength/bodypump/  -->
+                    <p>BODYPUMP™ is a barbell workout for anyone looking to get lean, toned and fit – fast.
+                        Using light to moderate weights with lots of repetition, BODYPUMP is a total body workout that
+                        burns up to 540 calories*. With scientifically proven moves and great, pumping music, it’s a
+                        fantastic and motivating class for instructors to teach.</p>
+                </div>
+            </div>
+            <div class="col">
+                <h4>Boxing</h4>
+                <div class="">
+                    <!-- Text used from https://www.aclosport.nl/en/sport/fit-boxing/  -->
+                    <p>Boxing is a cardio workout in which multiple elements of training are combined. During this
+                        lesson, we will make use of punching bags and boxing gloves. Multiple hit and punch combinations
+                        will be treated during this lesson (boxing and kickboxing). During this group lesson, you will
+                        work
+                        individually or in pairs to train your condition and endurance, and work on muscle strengthening
+                        exercises like pushups and sit-ups. Short and dynamic movements will raise your heartbeat and
+                        respiration in rapid speed! Are you ready to sweat and burn calories?</p>
+                </div>
+            </div>
+            <div class="col">
+                <h4>Spinning</h4>
+                <div class="">
+                    <!-- Text used from https://www.aclosport.nl/en/sport/spinning/  -->
+                    <p>A challenging, stimulating and fun training: spinning is all of this and more. You are challenged
+                        to extend your boundaries, to go much further than you thought you could. It is a training at
+                        every level, as you can determine the intensity by adjusting the resistance of your bike. Music
+                        will guide you through this hour, with fun on top of our priority list. It is recommended to
+                        bring a towel and a water bottle.</p>
+                </div>
+            </div>
+            <div class="col">
+                <h4>Pilates</h4>
+                <div class="">
+                    <!-- Text used from https://www.bodyvita.nl/en/  -->
+                    <p>Pilates is an innovative and safe way of movement and provides exercises for body and mind.
+                        Pilates was born from the movement principles of Joseph Pilates and can completely transform the
+                        way your body looks and functions. The goal of Pilates is not only to move but also to
+                        strengthen the connection between body and mind and therefore Pilates will not only make you
+                        feel fitter but also mentally stronger.</p>
+                </div>
+            </div>
+            <div class="col">
+                <h4>Yoga</h4>
+                <!-- Text used from https://www.nytimes.com/guides/well/beginner-yoga  -->
+                <p>It’s time to roll out your yoga mat and discover the combination of physical and mental exercises
+                    that for thousands of years have hooked yoga practitioners around the globe. The beauty of yoga is
+                    that you don’t have to be a yogi or yogini to reap the benefits. Whether you are young or old,
+                    overweight or fit, yoga has the power to calm the mind and strengthen the body. Don’t be intimidated
+                    by yoga terminology, fancy yoga studios and complicated poses. Yoga is for everyone.</p>
+            </div>
         </div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-
     </section>
 
     <!-- Schedule -->
