--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <!-- Navigation bar -->
         <!-- Based on https://www.youtube.com/watch?v=23bpce-5s8I  and customized/expanded further -->
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
             <a href="#Home" class="navbar-brand">ze Gym</a>
             <!-- Navigation toggle-->
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-menu" type="button"
