--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 </ul>
             </div>
             <!-- Button based on https://jsfiddle.net/shuvamallick/3o0h5oka/  but completely customized-->
-            <!-- Trigger/Open The Modal -->
+            <!-- Trigger/Open Sign in Modal -->
             <button type="button" class="btn-sm d-none d-sm-inline-block btn-slide-red" data-toggle="modal"
                 data-target="#signin-modal">Sign in / Sign up</button>
 
-            <!-- Modal -->
+            <!-- Sign in Modal -->
             <div class="modal fade" id="signin-modal" tabindex="-1" aria-labelledby="signin-modal" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -358,6 +358,52 @@
             </form>
         </div>
     </section>
+
+    <!-- Sign in Modal -->
+    <div class="modal fade" id="signin-modal" tabindex="-1" aria-labelledby="signin-modal" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title" id="signin-modal">Sign in form</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="email">Email address</label>
+                            <input type="email" class="form-control" id="email" aria-describedby="email-help"
+                                placeholder="Email Address" required>
+                            <small id="email-help" class="form-text text-muted">We'll never share your email
+                                with
+                                anyone else.</small>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" id="password"
+                                aria-describedby="Password" placeholder="Password" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="repeat-password">Repeat Password</label>
+                            <input type="password" class="form-control" id="repeat-password"
+                                placeholder="Repeat Password" required>
+                        </div>
+
+                        <div class="form-group form-check">
+                            <input type="checkbox" checked="checked" class="form-check-input"
+                                id="modal-checkbox">
+                            <label class="form-check-label" for="modal-checkbox">Remember me</label>
+                        </div>
+
+                        <button type="submit" class="btn-slide-red">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
 
